// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`DueDate should render correctly with days to due date 1`] = `
<div>
  4d to due date
</div>
`;

exports[`DueDate should render correctly with expired (days past due date) 1`] = `
<div>
  expired (4d past due date)
</div>
`;

exports[`DueDate should render correctly with expired (hours past due date) 1`] = `
<div>
  expired (3h past due date)
</div>
`;

exports[`DueDate should render correctly with expired (minutes past due date) 1`] = `
<div>
  expired (2m past due date)
</div>
`;

exports[`DueDate should render correctly with expired (seconds past due date) 1`] = `
<div>
  expired (&lt;1m past due date)
</div>
`;

exports[`DueDate should render correctly with expired (weeks past due date) 1`] = `
<div>
  expired (5w past due date)
</div>
`;

exports[`DueDate should render correctly with expired (years past due date) 1`] = `
<div>
  expired (6y past due date)
</div>
`;

exports[`DueDate should render correctly with hours to due date 1`] = `
<div>
  3h to due date
</div>
`;

exports[`DueDate should render correctly with minutes to due date 1`] = `
<div>
  2m to due date
</div>
`;

exports[`DueDate should render correctly with seconds to due date 1`] = `
<div>
  &lt;1m to due date
</div>
`;

exports[`DueDate should render correctly with weeks to due date 1`] = `
<div>
  5w to due date
</div>
`;

exports[`DueDate should render correctly with years to due date 1`] = `
<div>
  6y to due date
</div>
`;
